# edpm

./: .gitignore  Dockerfile  Dockerfile.simulator  Makefile  PROJECT-OVERVIEW.md  README.md  docker-compose-extended.yml  docker-compose.yml  edpm-lite-framework.md  edpm-lite-server.py  edpm-protocols-extended.md  edpm_lite.py  protocol_simulator.py  pyproject.toml  requirements.txt  test_edpm_lite.py  test_server_connection.py  todo.md
config/: default.json
examples/: basic_gpio_example.py  logging_example.py
examples-projects/gpio-control/: Dockerfile  README.md  config.json  docker-compose.yml  gpio_example.py  requirements.txt
examples-projects/i2c-sensors/: Dockerfile  README.md  config.json  docker-compose.yml  i2c_sensor_example.py  requirements.txt  sensor_configs.json
examples-projects/i2s-audio/: Dockerfile  README.md  audio_configs.json  config.json  docker-compose.yml  i2s_audio_example.py  requirements.txt
examples-projects/rs485-vfd/: Dockerfile  README.md  config.json  docker-compose.yml  modbus_devices.json  requirements.txt  rs485_vfd_example.py
protocols/: i2c_handler.py  i2s_handler.py  rs485_handler.py
src/edpm/: __init__.py  cli.py  server.py
src/edpm/core/: __init__.py  client.py  config.py  message.py  server.py
src/edpm/protocols/: __init__.py  gpio.py  i2c.py  i2s.py  rs485.py
src/edpm/web/: __init__.py  dashboard.py
tests/: test_i2c.py  test_i2s.py  test_rs485.py
web/: dashboard.html
